# ITforce

./: .dockerignore  Dockerfile  README.md  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py
