[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itforce-openenv"
version = "1.0.0"
description = "OpenEnv IT Support Ticket Triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "pydantic>=2.10.0",
  "openai>=1.58.0",
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/natz1010/ITforce"
Repository = "https://github.com/nate1029/ITforce"

[tool.setuptools]
py-modules = ["env", "main", "inference"]

